# bio-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
data/hw/hw1/: CP001872.fna  CP003913.fna
data/hw/hw2/: simulated_equal_freq.fa  simulated_markov_0.fa  simulated_markov_1.fa
data/hw/hw4/: CP003508.fna  dag.txt  test_dag.txt
data/hw/hw5/: seq1.fa  seq1_test.fa  seq2.fa  seq2_test.fa  seq3.fa  seq3_test.fa
data/hw/hw6/: example.scoring.scheme.txt
data/hw/hw8/: Pyrococcus_horikoshii.fasta
data/hw/hw9/: ENm006_short.aln  ENm010.aln
src/: main.rs
src/aoc/: .unison.day8.rs~.49bb5ce57fbcd6695b900e1063123a13.unison.tmp  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs
src/hw/: hw0.rs  hw1.rs  hw2.rs  hw3.rs  hw4.rs  hw5.rs  hw6.rs  hw7.rs  hw8.rs  hw9.rs  mod.rs
src/util/: read.rs
