[package]
name = "bio-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.1.0"
clap = { version = "4.0.29", features = ["derive"] }
gb-io = "0.7.1"
itertools = "0.10.5"
rand = "0.8.5"
regex = "1.7.0"
